--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -28,6 +28,8 @@ jobs:
         cache: 'npm'
         
     - run: npm ci
-    - run: npm test --passWithNoTests
+    - run: npm run format:check
+    - run: npm run lint
+    - run: npm test
     - run: npm run build
 
