--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix",
     "format": "prettier --write \"./**/*.{js,jsx,ts,tsx,css,md,json}\" --config ./.prettierrc",
-    "format:check": "prettier --check ."
+    "format:check": "prettier --check \"./**/*.{js,jsx,ts,tsx,css,md,json}\""
   },
   "eslintConfig": {
     "extends": [
