--- a/.github/workflows/react.yml
+++ b/.github/workflows/react.yml
@@ -5,7 +5,9 @@ name: React CI/CD
 
 on:
   push:
-    branches: [ main ]
+    branches: 
+    - main
+    - feature/*
   pull_request:
     branches: [ main ]
 
