css styles setup and ui components

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,6 +14,14 @@
   },
   "plugins": ["react"],
   "rules": {
-    "react/react-in-jsx-scope": "off"
+    "react/react-in-jsx-scope": "off",
+    "react/prop-types": 0,
+    "prettier/prettier": [
+      "error",
+      {
+        "endOfLine": "auto"
+      }
+    ],
+    "react/display-name": "off"
   }
 }
